--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .navbar-brand{
     font-family:cursive;
-    color: gray;
+    color: gray!important;
 }
 .title{
     background:white;
@@ -38,4 +38,12 @@ body {
 }
 .image-gallery img{
     width: 100%;
+    height: 100%;
+}
+.nav-pills .nav-link.active{
+    background-color: grey!important;
+    color: white!important;
+}
+.nav-link{
+    color: grey!important;
 }
